# linto-studio

./: .env  .envdefault  .gitignore  .prettierrc  Dockerfile  Jenkinsfile  LICENSE  README copy.md  README.md  RELEASE.md  app.js  config.js  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.js  install-front-dev.sh  install-front-prod.sh  mongo.yml  nohup.out  package-lock.json  package.json  release.sh  start.sh
components/: component.js
docker-optional/: docker-mongo.yml  studio-mongo.yml
linto-mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README-HTTP.md  README.md  REAL_WORLD_TEST_RESULTS.md  TEST_RESULTS.md  TEST_RESULTS_LATEST.md  api-direct-test.js  claude_desktop_config.example.json  claude_desktop_config_http.example.json  debug-api.js  docker-compose.yml  index.js  package.json  real-test.js  server.js  test.js
models/: index.js
mongo-seeds/: db-user-creation.js  init-template.js  seed-convo.js  seed-user.js
studio-api/: .dockerenv  .envdefault  .gitignore  .session-envdefault  Dockerfile  Dockerfile.alpine  README.md  RELEASE.md  app.js  config.js  docker-entrypoint-alpine.sh  docker-entrypoint.sh  jest.config.js  package-lock.json  package.json
studio-app/: README.md  pubspec.yaml  test.html
studio-dashboard/: .dockerenv  .envdefault  Dockerfile  Jenkinsfile  README.md  RELEASE.md  docker-entrypoint.sh  package-lock.json  package.json  wait-for-it.sh
studio-frontend/: .dockerenv  .dockerignore  .env copy  .envTemplate  .eslintrc.js  .gitignore  .prettierrc  Dockerfile  (+15 more)
studio-sdk/python/: .gitignore  publish.sh  pyproject.toml  setup.py  test.py
studio-sdk/python/linto/: __init__.py  main.py
studio-sdk/python/linto/models/: media.py
studio-sdk/python/linto/services/: pollingService.py  studioApiService.py  summaryPollingService.py
studio-sdk/python/linto/tools/: generate_service_config.py  remove_leading_slash.py
studio-sdk/python/studio_sdk/: __init__.py  studio_sdk.py
studio-sdk/python/studio_sdk/services/: studioApiService.py
(+2457 files in other folders)
