[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linto"
version = "1.0.0"
description = "LinTO Studio SDK is a library to interact with LinTO Studio API, it provides a simple interface to transcribe audio files."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "AGPL-3.0-or-later" }

dependencies = [
  "aiohttp",
]

keywords = [
  "STT",
  "Whisper",
  "Speech-to-Text",
  "Transcript",
  "Transcriber",
  "Timestamps"
]

[project.urls]
Repository = "https://github.com/linto-ai/linto-studio"

[tool.setuptools.packages.find]
where = ["."]
