[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "linto"
version = "1.0.0"
description = "Wrapper around LinTO Studio API"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "AGPL-3.0-or-later" }

dependencies = [
  "aiohttp",
]

keywords = [
  "STT",
  "Whisper",
  "Speech-to-Text",
  "Transcript",
  "Transcriber",
  "Timestamps"
]

[project.urls]
Repository = "https://github.com/linto-ai/linto-studio"
Homepage = "https://linto.ai"

[tool.setuptools.packages.find]
where = ["."]
